--- a/app/fonts.css
+++ b/app/fonts.css
@@ -165,8 +165,8 @@
   font-weight: 100;
   font-display: swap;
   src:
-    url('/_plex/IBM-Plex-Mono/fonts/complete/woff2/IBMPlexMono-Thin.woff2') format('woff2'),
-    url('/_plex/IBM-Plex-Mono/fonts/complete/woff/IBMPlexMono-Thin.woff') format('woff');
+    url('./_plex/IBM-Plex-Mono/fonts/complete/woff2/IBMPlexMono-Thin.woff2') format('woff2'),
+    url('./_plex/IBM-Plex-Mono/fonts/complete/woff/IBMPlexMono-Thin.woff') format('woff');
 }
 
 @font-face {
@@ -175,8 +175,8 @@
   font-weight: 100;
   font-display: swap;
   src:
-    url('/_plex/IBM-Plex-Mono/fonts/complete/woff2/IBMPlexMono-ThinItalic.woff2') format('woff2'),
-    url('/_plex/IBM-Plex-Mono/fonts/complete/woff/IBMPlexMono-ThinItalic.woff') format('woff');
+    url('./_plex/IBM-Plex-Mono/fonts/complete/woff2/IBMPlexMono-ThinItalic.woff2') format('woff2'),
+    url('./_plex/IBM-Plex-Mono/fonts/complete/woff/IBMPlexMono-ThinItalic.woff') format('woff');
 }
 
 @font-face {
@@ -185,8 +185,8 @@
   font-weight: 200;
   font-display: swap;
   src:
-    url('/_plex/IBM-Plex-Mono/fonts/complete/woff2/IBMPlexMono-ExtraLight.woff2') format('woff2'),
-    url('/_plex/IBM-Plex-Mono/fonts/complete/woff/IBMPlexMono-ExtraLight.woff') format('woff');
+    url('./_plex/IBM-Plex-Mono/fonts/complete/woff2/IBMPlexMono-ExtraLight.woff2') format('woff2'),
+    url('./_plex/IBM-Plex-Mono/fonts/complete/woff/IBMPlexMono-ExtraLight.woff') format('woff');
 }
 
 @font-face {
@@ -195,8 +195,8 @@
   font-weight: 200;
   font-display: swap;
   src:
-    url('/_plex/IBM-Plex-Mono/fonts/complete/woff2/IBMPlexMono-ExtraLightItalic.woff2') format('woff2'),
-    url('/_plex/IBM-Plex-Mono/fonts/complete/woff/IBMPlexMono-ExtraLightItalic.woff') format('woff');
+    url('./_plex/IBM-Plex-Mono/fonts/complete/woff2/IBMPlexMono-ExtraLightItalic.woff2') format('woff2'),
+    url('./_plex/IBM-Plex-Mono/fonts/complete/woff/IBMPlexMono-ExtraLightItalic.woff') format('woff');
 }
 
 @font-face {
@@ -205,8 +205,8 @@
   font-weight: 300;
   font-display: swap;
   src:
-    url('/_plex/IBM-Plex-Mono/fonts/complete/woff2/IBMPlexMono-Light.woff2') format('woff2'),
-    url('/_plex/IBM-Plex-Mono/fonts/complete/woff/IBMPlexMono-Light.woff') format('woff');
+    url('./_plex/IBM-Plex-Mono/fonts/complete/woff2/IBMPlexMono-Light.woff2') format('woff2'),
+    url('./_plex/IBM-Plex-Mono/fonts/complete/woff/IBMPlexMono-Light.woff') format('woff');
 }
 
 @font-face {
@@ -215,8 +215,8 @@
   font-weight: 300;
   font-display: swap;
   src:
-    url('/_plex/IBM-Plex-Mono/fonts/complete/woff2/IBMPlexMono-LightItalic.woff2') format('woff2'),
-    url('/_plex/IBM-Plex-Mono/fonts/complete/woff/IBMPlexMono-LightItalic.woff') format('woff');
+    url('./_plex/IBM-Plex-Mono/fonts/complete/woff2/IBMPlexMono-LightItalic.woff2') format('woff2'),
+    url('./_plex/IBM-Plex-Mono/fonts/complete/woff/IBMPlexMono-LightItalic.woff') format('woff');
 }
 
 @font-face {
@@ -225,8 +225,8 @@
   font-weight: 400;
   font-display: swap;
   src:
-    url('/_plex/IBM-Plex-Mono/fonts/complete/woff2/IBMPlexMono-Regular.woff2') format('woff2'),
-    url('/_plex/IBM-Plex-Mono/fonts/complete/woff/IBMPlexMono-Regular.woff') format('woff');
+    url('./_plex/IBM-Plex-Mono/fonts/complete/woff2/IBMPlexMono-Regular.woff2') format('woff2'),
+    url('./_plex/IBM-Plex-Mono/fonts/complete/woff/IBMPlexMono-Regular.woff') format('woff');
 }
 
 @font-face {
@@ -235,8 +235,8 @@
   font-weight: 400;
   font-display: swap;
   src:
-    url('/_plex/IBM-Plex-Mono/fonts/complete/woff2/IBMPlexMono-Italic.woff2') format('woff2'),
-    url('/_plex/IBM-Plex-Mono/fonts/complete/woff/IBMPlexMono-Italic.woff') format('woff');
+    url('./_plex/IBM-Plex-Mono/fonts/complete/woff2/IBMPlexMono-Italic.woff2') format('woff2'),
+    url('./_plex/IBM-Plex-Mono/fonts/complete/woff/IBMPlexMono-Italic.woff') format('woff');
 }
 
 @font-face {
@@ -245,8 +245,8 @@
   font-weight: 450;
   font-display: swap;
   src:
-    url('/_plex/IBM-Plex-Mono/fonts/complete/woff2/IBMPlexMono-Text.woff2') format('woff2'),
-    url('/_plex/IBM-Plex-Mono/fonts/complete/woff/IBMPlexMono-Text.woff') format('woff');
+    url('./_plex/IBM-Plex-Mono/fonts/complete/woff2/IBMPlexMono-Text.woff2') format('woff2'),
+    url('./_plex/IBM-Plex-Mono/fonts/complete/woff/IBMPlexMono-Text.woff') format('woff');
 }
 
 @font-face {
@@ -255,8 +255,8 @@
   font-weight: 450;
   font-display: swap;
   src:
-    url('/_plex/IBM-Plex-Mono/fonts/complete/woff2/IBMPlexMono-TextItalic.woff2') format('woff2'),
-    url('/_plex/IBM-Plex-Mono/fonts/complete/woff/IBMPlexMono-TextItalic.woff') format('woff');
+    url('./_plex/IBM-Plex-Mono/fonts/complete/woff2/IBMPlexMono-TextItalic.woff2') format('woff2'),
+    url('./_plex/IBM-Plex-Mono/fonts/complete/woff/IBMPlexMono-TextItalic.woff') format('woff');
 }
 
 @font-face {
@@ -265,8 +265,8 @@
   font-weight: 500;
   font-display: swap;
   src:
-    url('/_plex/IBM-Plex-Mono/fonts/complete/woff2/IBMPlexMono-Medium.woff2') format('woff2'),
-    url('/_plex/IBM-Plex-Mono/fonts/complete/woff/IBMPlexMono-Medium.woff') format('woff');
+    url('./_plex/IBM-Plex-Mono/fonts/complete/woff2/IBMPlexMono-Medium.woff2') format('woff2'),
+    url('./_plex/IBM-Plex-Mono/fonts/complete/woff/IBMPlexMono-Medium.woff') format('woff');
 }
 
 @font-face {
@@ -275,8 +275,8 @@
   font-weight: 500;
   font-display: swap;
   src:
-    url('/_plex/IBM-Plex-Mono/fonts/complete/woff2/IBMPlexMono-MediumItalic.woff2') format('woff2'),
-    url('/_plex/IBM-Plex-Mono/fonts/complete/woff/IBMPlexMono-MediumItalic.woff') format('woff');
+    url('./_plex/IBM-Plex-Mono/fonts/complete/woff2/IBMPlexMono-MediumItalic.woff2') format('woff2'),
+    url('./_plex/IBM-Plex-Mono/fonts/complete/woff/IBMPlexMono-MediumItalic.woff') format('woff');
 }
 
 @font-face {
@@ -285,8 +285,8 @@
   font-weight: 600;
   font-display: swap;
   src:
-    url('/_plex/IBM-Plex-Mono/fonts/complete/woff2/IBMPlexMono-SemiBold.woff2') format('woff2'),
-    url('/_plex/IBM-Plex-Mono/fonts/complete/woff/IBMPlexMono-SemiBold.woff') format('woff');
+    url('./_plex/IBM-Plex-Mono/fonts/complete/woff2/IBMPlexMono-SemiBold.woff2') format('woff2'),
+    url('./_plex/IBM-Plex-Mono/fonts/complete/woff/IBMPlexMono-SemiBold.woff') format('woff');
 }
 
 @font-face {
@@ -295,8 +295,8 @@
   font-weight: 600;
   font-display: swap;
   src:
-    url('/_plex/IBM-Plex-Mono/fonts/complete/woff2/IBMPlexMono-SemiBoldItalic.woff2') format('woff2'),
-    url('/_plex/IBM-Plex-Mono/fonts/complete/woff/IBMPlexMono-SemiBoldItalic.woff') format('woff');
+    url('./_plex/IBM-Plex-Mono/fonts/complete/woff2/IBMPlexMono-SemiBoldItalic.woff2') format('woff2'),
+    url('./_plex/IBM-Plex-Mono/fonts/complete/woff/IBMPlexMono-SemiBoldItalic.woff') format('woff');
 }
 
 @font-face {
@@ -305,8 +305,8 @@
   font-weight: 700;
   font-display: swap;
   src:
-    url('/_plex/IBM-Plex-Mono/fonts/complete/woff2/IBMPlexMono-Bold.woff2') format('woff2'),
-    url('/_plex/IBM-Plex-Mono/fonts/complete/woff/IBMPlexMono-Bold.woff') format('woff');
+    url('./_plex/IBM-Plex-Mono/fonts/complete/woff2/IBMPlexMono-Bold.woff2') format('woff2'),
+    url('./_plex/IBM-Plex-Mono/fonts/complete/woff/IBMPlexMono-Bold.woff') format('woff');
 }
 
 @font-face {
@@ -315,6 +315,6 @@
   font-weight: 700;
   font-display: swap;
   src:
-    url('/_plex/IBM-Plex-Mono/fonts/complete/woff2/IBMPlexMono-BoldItalic.woff2') format('woff2'),
-    url('/_plex/IBM-Plex-Mono/fonts/complete/woff/IBMPlexMono-BoldItalic.woff') format('woff');
+    url('./_plex/IBM-Plex-Mono/fonts/complete/woff2/IBMPlexMono-BoldItalic.woff2') format('woff2'),
+    url('./_plex/IBM-Plex-Mono/fonts/complete/woff/IBMPlexMono-BoldItalic.woff') format('woff');
 }
