draft (slider): add vertical and reverse slider components with updated styles

--- a/registry/src/components/Slider/index.css
+++ b/registry/src/components/Slider/index.css
@@ -4,11 +4,20 @@ input[type='range'] {
 }
 
 input[type='range']::-webkit-slider-thumb {
-  @apply pointer-events-auto h-4 w-4 cursor-grab appearance-none rounded-full bg-gray-950;
+  pointer-events: auto;
+  height: 1rem;
+  width: 1rem;
+  cursor: grab;
+  appearance: none;
+  border-radius: 9999px;
+  border: 2px solid #d1d5db;
+  background-color: #f3f4f6;
+  box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.05);
+  transition: background-color 0.2s ease-in-out;
 }
 
 input[type='range']::-webkit-slider-thumb:active {
-  @apply cursor-grabbing bg-gray-550;
+  @apply cursor-grabbing bg-gray-100;
 }
 
 input[type='range']::-moz-range-thumb {
@@ -16,7 +25,7 @@ input[type='range']::-moz-range-thumb {
 }
 
 .slider {
-  @apply relative z-0 flex w-64 flex-col items-center justify-center;
+  @apply relative z-0 flex w-full max-w-80 flex-col items-center justify-center;
 }
 
 .slider-track {
@@ -31,15 +40,73 @@ input[type='range']::-moz-range-thumb {
   @apply pointer-events-auto absolute z-10 w-full appearance-none;
 }
 
-.slider-marks,
-.slider-marks-item {
-  @apply absolute left-0 top-1/2 z-0 w-full -translate-y-1/2;
+.slider-marks {
+  @apply absolute left-0  z-0 w-full;
 }
 
 .slider-dot {
-  @apply pointer-events-none absolute top-1/2 h-1.5  w-1 -translate-x-1/2 -translate-y-1/2 rounded-full bg-white;
+  @apply pointer-events-none absolute bottom-1/2 h-1.5  w-1 -translate-x-1/2 translate-y-1/2 rounded-full;
+}
+
+.slider-dot.in-range {
+  @apply bg-white;
+}
+
+.slider-dot.out-range {
+  @apply bg-black;
 }
 
 .slider-label {
-  @apply absolute top-2.5 -translate-x-1/2 text-xs text-gray-500;
+  @apply absolute top-2.5 -translate-x-1/2 select-none text-xs text-gray-500;
+}
+
+.indicator-wrapper {
+  @apply absolute bottom-1/2 left-1/2 z-0 h-12 w-12 -translate-x-1/2 translate-y-1/2;
+}
+
+.indicator-wrapper:not(.reverse) .slider-thumb-indicator-text {
+  @apply text-label-02 absolute left-1/2 top-full -translate-x-1/2 select-none;
+}
+
+.indicator-wrapper.reverse .slider-thumb-indicator-text {
+  @apply text-label-02 absolute bottom-full left-1/2 -translate-x-1/2 select-none;
+}
+
+/* Styles for the vertical slider component */
+.slider-vertical {
+  @apply h-80 max-h-80 w-2;
+
+  & .slider-marks {
+    @apply absolute left-1/2 top-0 z-0 h-full -translate-x-1/2;
+  }
+
+  & .slider-highlight {
+    @apply absolute z-10 w-2 rounded-md;
+  }
+
+  & .slider-marks {
+    @apply absolute z-0 h-full w-full;
+  }
+
+  & .slider-input {
+    @apply h-[calc(100%+16px)] w-0.5;
+    writing-mode: vertical-lr;
+    transform: rotate(180deg);
+  }
+
+  & .slider-label {
+    @apply absolute left-5 top-auto h-fit w-fit translate-y-1/2 text-xs text-gray-500;
+  }
+
+  & .slider-dot {
+    @apply pointer-events-none absolute h-1 w-1.5 -translate-x-1/2 translate-y-1/2 rounded-full;
+  }
+
+  & .indicator-wrapper:not(.reverse) .slider-thumb-indicator-text {
+    @apply left-full top-1/2 -translate-y-1/2 translate-x-0;
+  }
+
+  & .indicator-wrapper.reverse .slider-thumb-indicator-text {
+    @apply bottom-auto left-auto right-full top-1/2 -translate-y-1/2 translate-x-0;
+  }
 }
