--- a/registry/src/components/Slider/index.css
+++ b/registry/src/components/Slider/index.css
@@ -1,15 +1,19 @@
-input[type='range'].par-input-range {
+input[type='range'].par-input-slider {
   /* add 20px to align dot in center thumb */
-  @apply pointer-events-none absolute z-10 h-0.5 w-[calc(100%+20px)] appearance-none bg-transparent;
+  @apply pointer-events-auto absolute z-10 h-0.5 w-[calc(100%+20px)] appearance-none bg-transparent;
 }
 
-input[type='range'].par-input-range:focus {
+.slider-range input[type='range'].par-input-slider {
+  @apply pointer-events-none;
+}
+
+input[type='range'].par-input-slider:focus {
   /* change forcus to thumb */
   @apply outline-none;
 }
 
 /* from figma and not use @apply for ::-webkit- */
-input[type='range'].par-input-range::-webkit-slider-thumb {
+input[type='range'].par-input-slider::-webkit-slider-thumb {
   pointer-events: auto;
   height: 1.25rem;
   width: 1.25rem;
@@ -22,21 +26,21 @@ input[type='range'].par-input-range::-webkit-slider-thumb {
   box-shadow: 3px 1px 6px 0px var(--par-color-effect-shadow, rgba(0, 0, 0, 0.1));
 }
 
-input[type='range'].par-input-range::-webkit-slider-thumb:hover {
+input[type='range'].par-input-slider::-webkit-slider-thumb:hover {
   box-shadow: 0px 0px 0px 8px var(--par-color-bg-slider-state-layer-hovered, rgba(203, 203, 203, 0.25));
 }
 
-input[type='range'].par-input-range:focus::-webkit-slider-thumb {
+input[type='range'].par-input-slider:focus::-webkit-slider-thumb {
   outline: 2px solid;
 }
 
-input[type='range'].par-input-range::-webkit-slider-thumb:active {
+input[type='range'].par-input-slider::-webkit-slider-thumb:active {
   cursor: grabbing;
 }
 
 /* FIREFOX */
 /* from figma and not use @apply for ::-webkit- */
-input[type='range'].par-input-range::-moz-range-thumb {
+input[type='range'].par-input-slider::-moz-range-thumb {
   pointer-events: auto;
   height: 1.25rem;
   width: 1.25rem;
@@ -49,18 +53,19 @@ input[type='range'].par-input-range::-moz-range-thumb {
   box-shadow: 3px 1px 6px 0px var(--par-color-effect-shadow, rgba(0, 0, 0, 0.1));
 }
 
-input[type='range'].par-input-range::-moz-range-thumb:hover {
+input[type='range'].par-input-slider::-moz-range-thumb:hover {
   box-shadow: 0px 0px 0px 8px var(--par-color-bg-slider-state-layer-hovered, rgba(203, 203, 203, 0.25));
 }
 
-input[type='range'].par-input-range:focus::-moz-range-thumb {
+input[type='range'].par-input-slider:focus::-moz-range-thumb {
   outline: 2px solid;
 }
 
-input[type='range'].par-input-range::-moz-range-thumb:active {
+input[type='range'].par-input-slider::-moz-range-thumb:active {
   cursor: grabbing;
 }
 
+/* Slider container */
 .slider {
   @apply relative z-0 flex h-fit w-full max-w-80 flex-col items-center justify-center;
 }
@@ -73,6 +78,11 @@ input[type='range'].par-input-range::-moz-range-thumb:active {
   @apply absolute h-2 rounded-md bg-[var(--par-color-border-slider-progress-neutral-enabled)];
 }
 
+.slider-progress.accent {
+  @apply bg-[var(--par-color-border-slider-progress-accent-enabled)];
+}
+
+/* Slider marks */
 .slider-marks {
   @apply absolute top-0 z-[2] h-full w-full;
 }
@@ -97,6 +107,7 @@ input[type='range'].par-input-range::-moz-range-thumb:active {
   @apply absolute left-1/2 top-3 -translate-x-1/2 select-none text-xs;
 }
 
+/* Indicator wrapper */
 .indicator-wrapper {
   @apply absolute bottom-1/2 left-1/2 z-[3] h-12 w-12 -translate-x-1/2 translate-y-1/2;
 }
@@ -109,7 +120,7 @@ input[type='range'].par-input-range::-moz-range-thumb:active {
   @apply text-label-02 absolute bottom-full left-1/2 -translate-x-1/2 select-none font-medium;
 }
 
-/* Styles for the vertical slider component */
+/* Vertical slider styles */
 .slider-vertical {
   @apply h-80 max-h-80 w-2;
 
@@ -121,7 +132,7 @@ input[type='range'].par-input-range::-moz-range-thumb:active {
     @apply absolute w-2 rounded-md;
   }
 
-  & input[type='range'].par-input-range {
+  & input[type='range'].par-input-slider {
     @apply h-[calc(100%+16px)] w-0.5;
     writing-mode: vertical-rl !important;
     direction: rtl !important;
@@ -150,4 +161,45 @@ input[type='range'].par-input-range::-moz-range-thumb:active {
   & .indicator-wrapper.reverse .slider-thumb-indicator-text {
     @apply bottom-auto left-auto right-full top-1/2 -translate-y-1/2 translate-x-0;
   }
+}
+
+.slider-disabled {
+  @apply cursor-not-allowed;
+  & .slider-track {
+    @apply bg-[var(--par-color-border-slider-track-disabled)];
+  }
+
+  & input[type='range'].par-input-slider {
+    @apply pointer-events-none;
+  }
+
+  & .slider-progress {
+    @apply bg-[var(--par-color-border-slider-progress-neutral-disabled)];
+  }
+
+  & .slider-progress.accent {
+    @apply bg-[var(--par-color-border-slider-progress-accent-disabled)];
+  }
+
+  & .slider-dot.in-range {
+    @apply bg-[var(--par-color-border-slider-discrete-disabled)];
+  }
+
+  & .slider-dot.out-range {
+    @apply bg-[var(--par-color-border-slider-discrete-neutral-disabled)];
+  }
+
+  & .slider-label {
+    @apply !text-[var(--par-color-text-primary-disabled)];
+  }
+
+  & .slider-thumb-indicator-text {
+    @apply !text-[var(--par-color-text-primary-disabled)];
+  }
+}
+.slider-disabled input[type='range'].par-input-slider::-webkit-slider-thumb {
+  cursor: not-allowed;
+  pointer-events: none;
+  border: 2px solid var(--par-color-border-slider-thumb-disabled);
+  background: var(--par-color-bg-slider-thumb-disabled);
 }
