--- a/registry/src/components/FileInput/index.css
+++ b/registry/src/components/FileInput/index.css
@@ -1,52 +1,23 @@
-/* Text input css */
-.input-wrapper {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  width: 100%;
-}
-
 .input-wrapper .file-input-wrapper.error-state {
-  border: 2px dashed red;
-  background-color: #fff5f5;
+  @apply border-2 border-dashed border-[var(--par-color-border-field-invalid)] bg-[var(--par-color-bg-field-invalid)];
 }
 
 .par-input[type='file'] {
-  display: none; /* Hide the actual input */
+  @apply hidden; /* Hide the actual input */
 }
 
 .file-input-wrapper {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  width: 100%;
-  padding: 12px 16px;
-  border: 1px dashed #ccc;
-  border-radius: 4px;
-  background-color: #f9f9f9;
-  cursor: pointer;
-  font-size: 14px;
-  color: #333;
-  transition:
-    border-color 0.2s,
-    background-color 0.2s;
+  @apply flex w-full cursor-pointer items-center justify-between rounded border border-dashed border-[var(--par-color-border-field-enabled)] bg-[--par-color-bg-field-enabled] p-3 -outline-offset-2 transition-colors duration-200;
 }
 
 .file-input-text {
-  flex-grow: 1;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  white-space: nowrap;
+  @apply flex-grow  overflow-hidden text-ellipsis whitespace-nowrap text-sm text-[var(--par-color-text-field-placeholder)];
 }
 
 .file-input-icon {
-  margin-left: 8px;
-  font-size: 16px;
-  color: #666;
+  @apply ml-2 text-base text-[var(--par-color-icon-field-button-enabled)];
 }
 
 .error-message {
-  margin-top: 4px;
-  color: red;
-  font-size: 12px;
+  @apply mt-1 text-xs text-[var(--par-color-text-helper-adverse)];
 }
